[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.1.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
clap = { version = "4.5.10", features = ["derive", "env"] }
clap_derive = "4.5.10"
